# tomatix

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
src/tomatix/app/: main.py
src/tomatix/core/: persistence.py  timer.py  timer_controller.py
src/tomatix/ui/: alert_window.py  focus_view.py  main_ui.py  settings_window.py  statistics_view.py  support_view.py
src/tomatix/ui/views/: base_view.py  focus_view.py  statistics_view.py  support_view.py
src/tomatix/ui/windows/: alert_window.py  settings_window.py
