[build-system]
requires = ["setuptools>=75.8.0", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "tomatix"
version = "0.1"
description = "Tomatix Timer Application"
authors = [
    {name = "Ze Rocinante", email = "193788145+zerocinante@users.noreply.github.com"}
]
dependencies = [
    "customtkinter>=5.0",
    "tzlocal>=5.0",
    "playsound>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tomatix*"]

[tool.setuptools.package-data]
tomatix = ["resources/*.wav"]
